tests/syntax_error/missing_arg_type.jou
def f(x):  # Error: expected ':' and a type after it (example: "foo: int"), got ')'
    return
